<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>lm</groupId>
  <artifactId>PMDBug</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>PMDBug</name>
  <description>PMDBug</description>
  <url>http://github.com/Fernal73/PMDBug</url>
  <profiles>
    <profile>
      <id>versions</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>versions-maven-plugin</artifactId>
            <version>${maven.versions.plugin.version}</version>
            <executions>
              <execution>
                <id>versions-plugin</id>
                <phase>validate</phase>
                <goals>
                  <goal>display-plugin-updates</goal>
                  <goal>display-property-updates</goal>
                  <goal>display-dependency-updates</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <properties>
    <project.build.sourceEncoding>
    UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>
    UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
    <maven.compiler.release>19</maven.compiler.release>
    <maven.minimal.version>3.6.3</maven.minimal.version>
    <java.version>19</java.version>
    <maven.surefire.plugin.version>
    3.2.5</maven.surefire.plugin.version>
    <maven.install.plugin.version>
    3.1.1</maven.install.plugin.version>
    <maven.deploy.plugin.version>
    3.1.1</maven.deploy.plugin.version>
    <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
    <maven.compiler.plugin.version>
    3.12.1</maven.compiler.plugin.version>
    <maven.resources.plugin.version>
    3.3.1</maven.resources.plugin.version>
    <maven.site.plugin.version>4.0.0-M13</maven.site.plugin.version>
    <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
    <maven.project.info.reports.plugin.version>
    3.5.0</maven.project.info.reports.plugin.version>
    <maven.enforcer.plugin.version>
    3.4.1</maven.enforcer.plugin.version>
    <xml.format.maven.plugin.version>
    3.3.1</xml.format.maven.plugin.version>
    <fmt.maven.plugin.version>2.13</fmt.maven.plugin.version>
    <maven.versions.plugin.version>
    2.16.2</maven.versions.plugin.version>
    <maven.dependency.plugin.version>
    3.6.1</maven.dependency.plugin.version>
    <maven.jxr.plugin.version>3.3.2</maven.jxr.plugin.version>
    <maven.help.plugin.version>3.4.0</maven.help.plugin.version>
    <maven.exec.plugin.version>3.1.0</maven.exec.plugin.version>
    <maven.properties.plugin.version>
    1.2.1</maven.properties.plugin.version>
    <gmavenplus.plugin.version>2.1.0</gmavenplus.plugin.version>
    <junit.version>5.10.2</junit.version>
    <pmd.version>7.0.0</pmd.version>
    <pmd.plugin.version>3.22.0</pmd.plugin.version>
  </properties>
  <repositories>
    <repository>
      <id>sonatype</id>
      <name>Sonatype Snapshots</name>
      <url>
      https://oss.sonatype.org/content/repositories/snapshots/</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>apache.snapshots</id>
      <name>Apache Snapshot Repository</name>
      <url>https://repository.apache.org/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit.platform</groupId>
        <artifactId>junit-platform-launcher</artifactId>
        <version>1.10.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
    </dependency>
  </dependencies>
  <build>
    <defaultGoal>clean install</defaultGoal>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>${pmd.plugin.version}</version>
          <dependencies>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-core</artifactId>
              <version>${pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-java</artifactId>
              <version>${pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-jsp</artifactId>
              <version>${pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-xml</artifactId>
              <version>${pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-html</artifactId>
              <version>${pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-cli</artifactId>
              <version>${pmd.version}</version>
            </dependency>
          </dependencies>
          <configuration>
            <rulesets>
              <ruleset>pmdrules.xml</ruleset>
            </rulesets>
            <linkXref>true</linkXref>
            <inputEncoding>utf-8</inputEncoding>
            <minimumTokens>100</minimumTokens>
            <targetJdk>${java.version}</targetJdk>
            <excludes>
              <exclude>**/*Bean.java</exclude>
              <exclude>**/module-info.java</exclude>
              <exclude>**/generated/*.java</exclude>
            </excludes>
            <excludeRoots>
              <excludeRoot>
              target/generated-sources/stubs</excludeRoot>
            </excludeRoots>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
                <goal>cpd-check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <configuration>
            <forkCount>1</forkCount>
            <reuseForks>true</reuseForks>
            <forkedProcessExitTimeoutInSeconds>
            30</forkedProcessExitTimeoutInSeconds>
            <shutdown>kill</shutdown>
            <jvm>${env.JAVA_HOME}/bin/java</jvm>
            <runOrder>alphabetical</runOrder>
            <rerunFailingTestsCount>0</rerunFailingTestsCount>
            <argline>-Xms1g -Xmx4g
            -XX:MaxMetaspaceSize=512m</argline>
            <argline>--illegal-access=deny</argline>
            <!--add-opens lm/lm=ALL-UNNAMED</argline>-->
            <useModulePath>false</useModulePath>
            <trimStackTrace>true</trimStackTrace>
            <useSystemClassLoader>true</useSystemClassLoader>
            <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven.clean.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven.resources.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <executions>
            <execution>
              <id>default-compile</id>
              <phase>none</phase>
            </execution>
            <execution>
              <id>default-testCompile</id>
              <phase>none</phase>
            </execution>
            <execution>
              <id>compile-src</id>
              <phase>compile</phase>
              <goals>
                <goal>compile</goal>
              </goals>
              <configuration>
                <forceJavacCompilerUse>true</forceJavacCompilerUse>
                <fork>true</fork>
                <release>${java.version}</release>
                <compilerArguments>
                  <Xmaxerrs>10000</Xmaxerrs>
                  <Xmaxwarns>10000</Xmaxwarns>
                </compilerArguments>
                <showWarnings>true</showWarnings>
                <verbose>true</verbose>
                <compilerArgs>
                  <arg>-Awarns</arg>
                </compilerArgs>
              </configuration>
            </execution>
            <execution>
              <id>compile-test</id>
              <phase>test-compile</phase>
              <goals>
                <goal>testCompile</goal>
              </goals>
              <configuration>
                <forceJavacCompilerUse>true</forceJavacCompilerUse>
                <fork>true</fork>
                <release>${java.version}</release>
                <compilerArguments>
                  <sourcepath>
                  ${project.basedir}/src/test/java/</sourcepath>
                  <Xmaxerrs>10000</Xmaxerrs>
                  <Xmaxwarns>10000</Xmaxwarns>
                </compilerArguments>
                <showWarnings>true</showWarnings>
                <verbose>true</verbose>
                <compilerArgs>
                  <arg>-Awarns</arg>
                </compilerArgs>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <classpathPrefix>libs/</classpathPrefix>
              </manifest>
            </archive>
          </configuration>
          <executions>
            <execution>
              <id>test-jar</id>
              <goals>
                <goal>test-jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>${maven.install.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven.deploy.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>${maven.site.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>
          maven-project-info-reports-plugin</artifactId>
          <version>
          ${maven.project.info.reports.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>au.com.acegi</groupId>
          <artifactId>xml-format-maven-plugin</artifactId>
          <version>${xml.format.maven.plugin.version}</version>
          <executions>
            <execution>
              <id>xml-format</id>
              <phase>process-sources</phase>
              <goals>
                <goal>xml-format</goal>
              </goals>
              <configuration>
                <indentSize>2</indentSize>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.coveo</groupId>
          <artifactId>fmt-maven-plugin</artifactId>
          <version>${fmt.maven.plugin.version}</version>
          <configuration>
            <verbose>true</verbose>
            <filesNamePattern>.*\.java</filesNamePattern>
            <skip>false</skip>
            <skipSortingImports>false</skipSortingImports>
            <style>google</style>
          </configuration>
          <executions>
            <execution>
              <id>format</id>
              <phase>process-sources</phase>
              <goals>
                <goal>format</goal>
              </goals>
            </execution>
          </executions>
          <dependencies>
            <dependency>
              <groupId>com.google.googlejavaformat</groupId>
              <artifactId>google-java-format</artifactId>
              <version>1.18.1</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven.enforcer.plugin.version}</version>
          <executions>
            <execution>
              <phase>validate</phase>
              <id>enforce-versions</id>
              <goals>
                <goal>display-info</goal>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <bannedPlugins>
                    <!-- will only display a warning but does not fail the build. -->
                    <level>WARN</level>
                    <excludes />
                    <message>Please consider using the
                    maven-invoker-plugin
                    (http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
                  </bannedPlugins>
                  <requireMavenVersion>
                    <version>${maven.minimal.version}</version>
                  </requireMavenVersion>
                  <requireJavaVersion>
                    <version>${java.version}</version>
                  </requireJavaVersion>
                  <requireOS>
                    <family>unix</family>
                  </requireOS>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven.dependency.plugin.version}</version>
          <executions>
            <execution>
              <id>copy-dependencies</id>
              <phase>initialize</phase>
              <goals>
                <goal>copy-dependencies</goal>
              </goals>
              <configuration>
                <outputDirectory>
                ${project.build.directory}/libs</outputDirectory>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jxr-plugin</artifactId>
          <version>${maven.jxr.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-help-plugin</artifactId>
          <version>${maven.help.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>properties-maven-plugin</artifactId>
          <version>${maven.properties.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${maven.versions.plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>au.com.acegi</groupId>
        <artifactId>xml-format-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.coveo</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-help-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>com.coveo</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <report>dependency-updates-report</report>
              <report>plugin-updates-report</report>
              <report>property-updates-report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <reportSets>
          <reportSet>
            <!-- by default, id = "default" -->
            <reports>
              <!-- select non-aggregate reports -->
              <report>pmd</report>
              <report>cpd</report>
            </reports>
          </reportSet>
          <reportSet>
            <!-- aggregate reportSet, to define in poms having modules -->
            <id>aggregate</id>
            <inherited>false</inherited>
            <!-- don't run aggregate in child modules -->
            <reports>
              <report>aggregate-pmd-no-fork</report>
              <report>aggregate-cpd</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
</project>
